docs/api/qiskit/0.35/qiskit.transpiler.passes.HoareOptimizer.mdx
---
title: HoareOptimizer (v0.35)
description: API reference for qiskit.transpiler.passes.HoareOptimizer in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.HoareOptimizer
---

# HoareOptimizer

<Class id="qiskit.transpiler.passes.HoareOptimizer" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/optimization/hoare_opt.py" signature="HoareOptimizer(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  This is a transpiler pass using Hoare logic circuit optimization. The inner workings of this are detailed in: [https://arxiv.org/abs/1810.00375](https://arxiv.org/abs/1810.00375)

  **Parameters**

  **size** (*int*) – size of gate cache, in number of gates

  **Raises**

  **MissingOptionalLibraryError** – if unable to import z3 solver

  ## Methods

  <span id="qiskit-transpiler-passes-hoareoptimizer-name" />

  ### name

  <Function id="qiskit.transpiler.passes.HoareOptimizer.name" signature="HoareOptimizer.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-hoareoptimizer-run" />

  ### run

  <Function id="qiskit.transpiler.passes.HoareOptimizer.run" signature="HoareOptimizer.run(dag)">
    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the directed acyclic graph to run on.

    **Returns**

    Transformed DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.HoareOptimizer.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.HoareOptimizer.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

